Some more basic game framework in place. Also updated the engine submodule to 4.13.

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -1,13 +1,11 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
-GlobalDefaultGameMode="/Script/Crescendo.CrescendoGameMode"
+EditorStartupMap=/Game/Maps/Prototype.Prototype
+GameDefaultMap=/Game/Maps/Prototype.Prototype
+GlobalDefaultGameMode=/Game/Blueprints/GameMode_BP.GameMode_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-
