Added GifCam to Tools and updated LFS to track EXEs. Also fixed some deprecation warnings and a compile error for Android.

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,7 @@ Archive
 
 # Include some useful tool Executables
 !Tools/7zip/7za.exe
+!Tools/GifCam/GifCam.exe
+
+# Ignore platform Builds
+Game/Build/*
